--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_install:
 install:
   - sudo apt-get install -y python-opencv
   - pip install -r requirements.txt
+  - pip install pytest
 script:
   - python setup.py build
+  - py.test
 virtualenv:
   system_site_packages: true
