--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ before_install:
 install:
   - sudo apt-get install -y python-opencv
   - pip install -r requirements.txt
+  - pip install codecov
 script:
-  - py.test
+  - py.test --cov=.
+after_success:
+  - codecov
 virtualenv:
   system_site_packages: true
